[package]
name = "trackr"
description = "Track changes on a struct as bitflags"
version = "0.2.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/jon-zu/trackr"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
bitflags = "2"

[[test]]
name = "tests"
path = "tests/progress.rs"


[dependencies]
bitflags = "2"
trackr_derive = { version = "0.2", path = "../trackr_derive" }

