[package]
name = "trackr_derive"
description = "Derive macro for trackr"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jon-zu/trackr"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features=["extra-traits", "parsing"]}
quote = "1"
darling = "0.20"
proc-macro2 = "1"
either = "1"
